--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,10 +6,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    padding: 0 48px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    width: 100%;
 }
 
 @media screen and (max-width:730px) {
     .footer {
         flex-direction: column;
+        padding: 0 24px;
     }
 }
