--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,6 @@
 .lead {
     display: flex;
-    color: #e5e5e5;
+    color: #fff;
     flex-direction: column;
     justify-content: center;
     width: 100%;
