--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,16 +2,28 @@
     width: 100%;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, minmax(min-width, max-width));
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, auto);
     row-gap: 48px;
     column-gap: 40px;
 }
 
+
+@media screen and (max-width:1140px) {
+    .place {
+        column-gap: 32px;
+    }
+}
+
+@media screen and (max-width:984px) {
+    .place {
+        column-gap: 28px;
+    }
+}
 @media screen and (max-width:568px) {
     .place {
         grid-template-columns: 1fr;
-        grid-template-rows: minmax(min-width, max-width);
+        grid-template-rows: repeat(2, auto);
         row-gap: 32px;
     }
 }
