--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,6 +5,8 @@
     line-height: 1.125;
     font-weight: 400;
     box-sizing: border-box;
+    color: #fff;
+    text-decoration: none;
 }
 
 .footer__link:last-child {
@@ -13,14 +15,16 @@
 
 @media screen and (max-width:730px) {
     .footer__link {
-        font-size: 24;
+        font-size: 24px;
         line-height: 1;
         padding: 0 0 32px;
     }
 
     .footer__link:last-child {
-        font-size: 24;
-        line-height: 1;
         padding: 0 0 24px;
     }
+}
+
+.footer__link:hover {
+    opacity: .8;
 }
