--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,9 +8,17 @@
     margin: 0 auto;
 }
 
+
+@media screen and (max-width:984px) {
+    .footer {
+        padding: 0 24px;
+    }
+}
+
+
 @media screen and (max-width:730px) {
     .footer {
         flex-direction: column;
-        padding: 0 24px;
+        padding: 0 16px;
     }
 }
