--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -10,14 +10,15 @@
 
 .header__lang-link:first-child {
     margin-right: 18px;
-    text-decoration-style: solid;
-    text-decoration: underline;
 }
-
 
 @media screen and (max-width: 568px) {
     .header__lang-link {
         font-size: 18px;
         line-height: 1.1;
     }
+}
+
+.header__lang-link:hover {
+    opacity: .8;
 }
