--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,6 @@
 .intro__text {
     max-width: 690px;
-    padding: 40px 20px 33px 0;
+    padding: 40px 0 33px 0;
     margin: 0;
     font-family: 'Inter', Arial, san-serif;
     font-weight: 400;
@@ -15,6 +15,5 @@
     .intro__title {
         font-size: 32px;
         line-height: 1.1;
-        width: 100%;
     }
 }
