--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,7 +5,7 @@
     line-height: 1.4;
     margin: 0;
     padding: 8px 0 0;
-    max-width: 158px;
+    letter-spacing: 1.5px;
     text-transform: uppercase;
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: grayscale;
