--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,6 +9,7 @@
     text-align: center;
     box-sizing: border-box;
     width: 100%;
+    color: #fff;
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: grayscale;
 }
@@ -23,7 +24,7 @@
     .lead__subtitle {
         font-size: 16px;
         line-height: 1.25;
-        padding: 16px 16px 40px;
+        padding: 16px 0 40px;
         max-width: 70%;
     }
 }
