--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,3 +2,9 @@
     width: 100%;
     max-width: 460px;
 }
+
+@media screen and (max-width:568px) {
+    .place__image {
+        margin: 0 auto;
+    }
+}
