--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,11 +5,8 @@
     line-height: 1.2;
     text-decoration: none;
     color: #e5e5e5;
-    box-sizing: border-box;
-}
-
-.header__lang-link:first-child {
-    margin-right: 18px;
+    padding: 0;
+    margin: 0;
 }
 
 @media screen and (max-width: 568px) {
