--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,8 +3,21 @@
     max-width: 460px;
 }
 
+@media screen and (max-width:1140px) {
+    .place__image {
+        max-width: 440px;
+    }
+}
+
+@media screen and (max-width:984px) {
+    .place__image {
+        max-width: 340px;
+    }
+}
+
 @media screen and (max-width:568px) {
     .place__image {
         margin: 0 auto;
+        max-width: 288px;
     }
 }
