--- a/blocks/content/__photo-grid/content__photo-grid.css
+++ b/blocks/content/__photo-grid/content__photo-grid.css
@@ -1,16 +1,38 @@
-.content__photo-grid {
-    padding: 0 48px;
-    box-sizing: border-box;
-}
+.content__photo-grid { 
+    display: grid; 
+    grid-template-rows: repeat(3, 1fr); 
+    grid-template-columns: repeat(4, 1fr); 
+    width: 100%; 
+    row-gap: 16px; 
+    column-gap: 16px; 
+    margin: 0; 
+    padding: 0; 
+    list-style: none; 
+} 
 
-@media screen and (max-width:984px) {
-    .content__photo-grid {
-        padding: 0 24px;
-    }
-}
+@media screen and (max-width:1140px) { 
+    .content__photo-grid  { 
+        grid-template-rows: repeat(auto-fit, 1fr); 
+        grid-template-columns: repeat(3, 1fr); 
+        row-gap: 14px; 
+        column-gap: 14px; 
+    } 
+} 
 
-@media screen and (max-width:568px) {
-    .content__photo-grid {
-        padding: 0 16px;
-    }
-}
+@media screen and (max-width:984px) { 
+    .content__photo-grid  { 
+        grid-template-rows: repeat(auto-fit, 1fr); 
+        grid-template-columns: repeat(2, 1fr); 
+        row-gap: 16px; 
+        column-gap: 16px; 
+    } 
+} 
+
+@media screen and (max-width:568px) { 
+    .content__photo-grid  { 
+        grid-template-rows: repeat(auto-fit, 1fr); 
+        grid-template-columns: repeat(1, 1fr); 
+        row-gap: 12px; 
+        column-gap: 12px; 
+    } 
+} 
