--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,35 +1,18 @@
-.photo-grid {
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(4, 1fr);
-    width: 100%;
-    row-gap: 16px;
-    column-gap: 16px;
-}
 
-@media screen and (max-width:1140px) {
-    .photo-grid {
-        grid-template-rows: repeat(auto-fit, 1fr);
-        grid-template-columns: repeat(3, 1fr);
-        row-gap: 14px;
-        column-gap: 14px;
-    }
+.photo-grid {
+    padding: 0 48px;
+    box-sizing: border-box;
+    width: 100%
 }
 
 @media screen and (max-width:984px) {
     .photo-grid {
-        grid-template-rows: repeat(auto-fit, 1fr);
-        grid-template-columns: repeat(2, 1fr);
-        row-gap: 16px;
-        column-gap: 16px;
+        padding: 0 24px;
     }
 }
 
 @media screen and (max-width:568px) {
     .photo-grid {
-        grid-template-rows: repeat(auto-fit, 1fr);
-        grid-template-columns: repeat(1, 1fr);
-        row-gap: 12px;
-        column-gap: 12px;
+        padding: 0 16px;
     }
 }
