--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,7 +2,7 @@
     width: 100%;
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 460px 1fr;
     grid-template-rows: repeat(2, auto);
     row-gap: 48px;
     column-gap: 40px;
@@ -12,12 +12,14 @@
 @media screen and (max-width:1140px) {
     .place {
         column-gap: 32px;
+        grid-template-columns: 440px 1fr;
     }
 }
 
 @media screen and (max-width:984px) {
     .place {
         column-gap: 28px;
+        grid-template-columns: 340px 1fr;
     }
 }
 @media screen and (max-width:568px) {
